Various minor changes -  show the overflow in the view and instead hide tasks that are before the view start time   - Tasks that end after the view range will overflow the vew because of this change which isn't ideal. I think it would be cool to instead have the view dynamically change to fit all the current tasks within it instead - Minor stlye adjustments on mobile to fix overflow and awkward sizing of some buttons/inputs - Add view transition animation to the create and delete task function - Allow creation of a task by pressing enter in the name/description fields via use of a form element

--- a/src/components/Calendar/index.module.scss
+++ b/src/components/Calendar/index.module.scss
@@ -51,7 +51,7 @@
 
 .tasks {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   cursor: crosshair;
   padding-left: 5ch;
   grid-area: 1/1/-1/-1;
@@ -62,7 +62,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   gap: var(--spacer-s);
-  
+
 }
 
 .entry {
