--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,11 @@ hgroup p {
   box-shadow: 0 0.25em 0.5em hsl(0, 0%, 0%, 0.1), 0 -0.25em 0.5em hsl(0, 0%, 0%, 0.1) inset,
         0 0.25em 0.5em hsl(0, 0%, 100%, 0.2) inset;
 }
+
+::view-transition-group(*) {
+  animation-duration: 150ms;
+}
+
 @keyframes hue-rotation {
   to {
     filter: hue-rotate(360deg);
