--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -47,5 +47,6 @@ button,
 
 .buttons {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem 0.6rem;
 }
