--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -12,6 +12,8 @@ textarea {
     transition-duration: 0.6s;
     transition-timing-function: ease;
     line-height: 1.2;
+    max-width: 100%;
+    min-width: 0;
     box-shadow:  0 -0.25em 0.5em hsl(0, 0%, 0%, 0.1) inset,
         0 0.25em 0.5em hsl(0, 0%, 100%, 0.2) inset;
     &:focus {
@@ -30,6 +32,10 @@ textarea {
             0 0.25em 0.5em hsl(0, 0%, 0%, 0.1) inset;
         transition: all 50ms;
     }
+}
+
+input[type=text], textarea {
+    width: min(300px, 100%);
 }
 
 
